# olt

./: .gitignore  LICENSE  README.md  environment.yaml  evaluation_bop.py  example_multiview.py  pyproject.toml  run_evaluation_bop.py  test.py  test_memory.py  test_single_img.py  test_timings.py
experiments/: 01_tracker_in_threads.py  estimate_bop_eval_track_runtimes.py  multiview_olt.py  plot_bop_eval_track_runtimes.py  plot_bop_experiments.py  plot_cosypose_runtime.py  run_cosypose_dt.py  run_evaluation_bop.py  run_evaluation_bop_continous_tracker.py  run_evaluation_bop_sync.py  tracker_decay_graph.py
olt/: actor_tracker.py  config.py  continuous_tracker.py  evaluation_tools.py  localizer.py  multi_proc_track_loc.py  overlay_rendering.py  rate.py  tracker.py  tracker_proxy.py  utils.py
test/: test_actors.py  test_eval.py  test_localizer.py  test_multitracker_proxy.py  test_no_object.py  test_tracker_proxy.py  test_trackeractor.py
