[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olt"
version = "0.0.1"
authors = [
  { name="Mederic Fourmy", email="mederic.fourmy@cvut.cz" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3-Clause  License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MedericFourmy/olt"
"Bug Tracker" = "https://github.com/MedericFourmy/olt/issues"

