[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olt"
version = "0.0.1"
authors = [
  { name="Mederic Fourmy", email="mederic.fourmy@cvut.cz" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MedericFourmy/olt"
"Bug Tracker" = "https://github.com/MedericFourmy/olt/issues"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"